Update banner content text

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     <img src="https://assets.nflxext.com/ffe/siteui/vlv3/960f7a51-0df7-483d-ace1-ddbacef02b32/0a0f5338-0dba-40df-908f-f1dc8a3f6b04/IN-en-20230731-popsignuptwoweeks-perspective_alpha_website_large.jpg" alt="Banner"/>
     <div class="banner-content">
       <h1>Featured Movie</h1>
-      <p>A thrilling adventure awaits you...</p>
+      <p>A thrill awaits you...</p>
       <button>Play</button>
       <button class="more-info">More Info</button>
     </div>
